fix: show previously hidden studio amenities paragraph on mobile devices

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -329,8 +329,14 @@ img {
     text-align: center;
     margin-bottom: 40px;
 
-    .hide-on-mobile {
-        display: none;
+    .about-studio_container {
+        .hide-on-mobile {
+            display: none;
+        }
+
+        #studio-amenities_para {
+            margin-bottom: 1.5rem;
+        }
     }
 
     .section-header {
@@ -596,6 +602,9 @@ footer {
         .about-studio_container {
             width: 70%;
             margin: 24px auto;
+            .hide-on-mobile {
+                display: block;
+            }
         }
 
         .btn-primary {
@@ -700,6 +709,10 @@ footer {
 
         .about-studio_container {
             width: 70%;
+
+            .hide-on-mobile {
+                display: block;
+            }
 
             p {
                 text-align: center;
